2009-02-06  Maynard Johnson  <maynardj@us.ibm.com>

	* libutil++/bfd_support.cpp:
	* libutil++/bfd_support.h:
	* libutil++/op_bfd.cpp: Fixup debuginfo processing for ppc64

2009-02-03  Carl Love  <cel@us.ibm.com>

	* utils/opcontrol:
	* doc/oprofile.xml:
	* events/ppc64/cell-be/events:
	* events/ppc64/cell-be/unit_masks: Added IBM CELL SPU event profiling support

2009-01-05  Maynard Johnson  <maynardj@us.ibm.com>

	* m4/binutils.m4: Fix error in AC_CHECK_LIB action

2008-12-23  Maynard Johnson  <maynardj@us.ibm.com>

	* utils/opcontrol: reverse the logic in
	  is_non_cell_ppc64_variant to avoid the need
	  for maintenance as new ppc64 variants are addded

2008-12-12  Maynard Johnson  <maynardj@us.ibm.com>

	* libop/Makefile.am: Add Andi Kleen's new op_hw_specific.h
	  file to to Makefile.am

2008-11-24  Robert Richter <robert.richter@amd.com>

	* utils/opcontrol: Correct spelling error

2008-11-24  Robert Richter <robert.richter@amd.com>

	* daemon/opd_events.c:
	* daemon/opd_events.h:
	* daemon/opd_mangling.c:
	* daemon/opd_mangling.h:
	* daemon/opd_sfile.c:
	* daemon/opd_trans.c:
	* events/x86-64/family10/events:
	* utils/opcontrol: fix whitespaces

2008-11-12  Andi Kleen  <andi@firstfloor.org>

	* libop/op_events.c
	* libop/op_events.h
	* libpp/op_header.cpp: Fix regression in arch perfmon code
	  (see bug #2161762)

2008-11-12  Andi Kleen  <andi@firstfloor.org>

	* events/i386/arch_perfmon/events: Fix event name to avoid
	  parsing error

2008-11-05  Maynard Johnson  <maynardj@us.ibm.com>

	* libutil++/file_manip.cpp: Add mode arg to open

2008-10-30  William Cohen  <wcohen@redhat.com>

	* m4/binutils.m4: Defeat compiler optimization in configure
	  check for bfd_get_synthetic_symtab

2008-10-27  Maynard Johnson  <maynardj@us.ibm.com>

	* libutil++/op_spu_bfd.cpp: Initialize anon_obj to false for op_bfd
	  objects for Cell SPE embedded binaries

2008-10-23  Dave Nomura  <dcnltc@us.ibm.com>

	* libutil++/xml_output.cpp:
	* libutil/xml_out.c: