@@ -18,6 +18,9 @@
 #include <fstream>
 #include <iostream>
 
+#include <stdlib.h>
+#include <string.h>
+
 using namespace std;
 
 namespace {
